5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1601_2426.log
== TEST (2019-04-04 12:39:19) 
-- CODE:
tempo = t = float(input())
velocidade = v = float(input())

distancia = d = v*t
print(d)
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:44:49) 
-- CODE:
tempo = t = float(input())
velocidade = v = float(input())

distancia = d = v*t
print(d)

quantidade = l = (d * 12)
print(l)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:46:30) 
-- CODE:
tempo = t = float(input())
velocidade = v = float(input())

distancia = d = v*t
print(d)

quantidade = l = (d * 12)
print(l)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:05:40) 
-- CODE:
tempo = t = float(input())
velocidade = v = float(input())

distancia = d = v*t
print(d)

quantidade = l = (d * 12)
print(l)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:07:07) 
-- CODE:
tempo = float(input())
velocidade = float(input())

distancia = velocidade * tempo
print(distancia)

quantidade = l = (d * 12)
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade = l = (d * 12)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:08:54) 
-- CODE:
tempo = float(input())
velocidade = float(input())

distancia = velocidade * tempo
print(distancia)

quantidade = (distancia * 12)
print(quantidade)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:10:42) 
-- CODE:
tempo = float(input())
velocidade = float(input())

distancia = velocidade * tempo
print(distancia)

quantidade = (distancia / 12)
print(quantidade)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:10:53) 
-- CODE:
tempo = float(input())
velocidade = float(input())

distancia = velocidade * tempo
print(distancia)

quantidade = (distancia / 12)
print(quantidade)
-- EXECUTION TIME:
0.198593
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
